refactor and progress to week 2